--- a/src/components/current-weather/currentWeather.scss
+++ b/src/components/current-weather/currentWeather.scss
@@ -1,21 +1,33 @@
 @import "../../styles/utility";
 
 .current-weather-container {
-  @include centered-container;
-  width: 100%;
-  background-color: $primary-color;
-  color: $secondary-color;
-  gap: 24px;
-  padding-bottom: 24px;
-  border-radius: 12px;
+  @extend %centered-container;
+  @extend %container-style;
+  background-color: $deep-blue;
+  img {
+    width: 80%;
+    height: auto;
+    object-fit: cover;
+  }
   .temp {
-    font-size: 2.7em;
-    margin-top: 0;
+    @extend %inter-bold;
+    font-size: 2em;
   }
-  .day-phases-container {
-    display: flex;
-    justify-content: space-around;
-    place-items: center;
-    width: 100%;
-  }
+}
+.today {
+  grid-area: day;
+}
+
+.day-phases-container {
+  @extend %centered-container;
+  @extend %container-style;
+  background: $deep-orange;
+  margin-top: 12px;
+}
+
+.other-info {
+  @extend %centered-container;
+  @extend %container-style;
+  background: $deep-blue;
+  margin-top: 12px;
 }
