--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,11 +1,10 @@
 @import "../../styles/utility";
 .sidebar {
-  @include centered-container;
+  grid-area: sidebar;
   width: 100%;
-  background-color: $secondary-color;
-  padding: 24px;
-  gap: 12px;
-  color: black;
-  border-radius: 24px;
-  order: 1;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
