--- a/src/components/lineChart/lineChart.scss
+++ b/src/components/lineChart/lineChart.scss
@@ -8,3 +8,10 @@
   justify-content: space-between;
   align-items: center;
 }
+.tooltip-container {
+  background-color: white;
+  padding: 0.5em;
+  border-radius: 8px;
+  width: fit-content;
+  height: auto;
+}
