--- a/src/components/searchBar/searchbar.scss
+++ b/src/components/searchBar/searchbar.scss
@@ -3,7 +3,7 @@
 .form {
   @extend %centered-container;
   background-color: white;
-  padding: 0.8em;
+  margin-bottom: 1em;
   width: 100%;
   height: auto;
   border-radius: 12px;
