--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,10 +1,13 @@
 @import "../../styles/utility";
 .sidebar {
+  @extend %container-style;
+  background-color: white;
   grid-area: sidebar;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: stretch;
+  justify-items: stretch;
   align-items: center;
 }
