--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -45,6 +45,7 @@ $dark-text-color: black;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Inter", sans-serif;
 }
 body {
   background-color: $bg-color;
@@ -57,6 +58,7 @@ h1 {
 }
 h2 {
   @extend %inter-bold;
+  align-self: flex-start;
 }
 
 #root {
@@ -64,9 +66,26 @@ h2 {
   grid-template-columns: 1fr 1fr 0.5fr;
   grid-template-rows: auto;
   grid-template-areas:
-    "day day sidebar"
     "forecast forecast sidebar"
     "hourly hourly sidebar"
     "aqi aqi sidebar";
-  gap: 24px;
+  gap: 2em;
+  margin: 2em;
+  place-content: center;
+  place-items: center;
+}
+
+@media screen and (max-width: 798px) {
+  #root {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-template-areas:
+      "sidebar"
+      "forecast"
+      "hourly"
+      "aqi";
+    gap: 12px;
+    margin: 1em;
+  }
 }
