--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -77,16 +77,14 @@ h2 {
 
 @media screen and (max-width: 798px) {
   #root {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    grid-template-areas:
-      "sidebar"
-      "forecast"
-      "hourly"
-      "aqi";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     gap: 1em;
-    margin: 1.5em;
-    place-items: center;
+    margin: auto;
+  }
+  body {
+    margin: auto;
   }
 }
